--- a/Untitled-4.html
+++ b/Untitled-4.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will You Be My Wife?</title>
+    <title>Lovely game</title>
     <style>
         body {
             text-align: center;
             font-family: Arial, sans-serif;
             background-color: #fd96b5;
-            margin: 50px;
+            padding-top: 50px;
         }
         h1 {
             color: #000000;
